welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:4: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
while(!estFaceMur() && a=false){
                    ^